--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap");
 @import "tailwindcss";
 @theme {
-  --color-primary: #0a0e14;
-  --color-midnight: #121619;
-  --color-navy: #1a1f24;
-  --color-indigo: #1e2329;
-  --color-storm: #252b32;
-  --color-aqua: #2dd4bf;
-  --color-mint: #4ade80;
-  --color-royal: #22c55e;
-  --color-lavender: #34d399;
-  --color-fuchsia: #10b981;
-  --color-orange: #346751;
-  --color-sand: #a8916d;
-  --color-coral: #ecdbba;
+  --color-primary: #030412;
+  --color-midnight: #06091f;
+  --color-navy: #161a31;
+  --color-indigo: #1f1e39;
+  --color-storm: #282b4b;
+  --color-aqua: #33c2cc;
+  --color-mint: #57db96;
+  --color-royal: #5c33cc;
+  --color-lavender: #7a57db;
+  --color-fuchsia: #ca2f8c;
+  --color-orange: #cc6033;
+  --color-sand: #d6995c;
+  --color-coral: #ea4884;
   --animate-orbit: orbit 50s linear infinite;
   @keyframes orbit {
     0% {
@@ -48,9 +48,9 @@
   }
 }
 body {
-  background: #0a0e14;
+  background: #030412;
   font-family: "Funnel Display", sans-serif;
-  color: #ecdbba;
+  color: white;
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
@@ -121,7 +121,7 @@ body {
   @apply p-6 bg-gradient-to-b from-royal to-lavender rounded-2xl;
 }
 .grid-black-color {
-  @apply p-6 bg-gradient-to-tl from-[#1e2329] via-[#121619] to-[#1a1f24] rounded-2xl;
+  @apply p-6 bg-gradient-to-tl from-[#3A3A3A] via-[#242424] to-[#3A3A3A] rounded-2xl;
 }
 
 /* Contact Section*/
